@@ -7,7 +7,6 @@
 	
 	<name>autopilot</name>
 	<layout>vbox</layout>
-	<pref-width>260</pref-width>
 	
 	<group>
 		<layout>hbox</layout>
@@ -141,67 +140,20 @@
 	
 	<group>
 		<layout>table</layout>
+
+		<text>
+			<row>0</row>
+			<col>0</col>
+			<border>1</border>
+			<label></label>
+			<valign>center</valign>
+		</text>
 		
 		<text>
 			<row>0</row>
 			<col>1</col>
-			<visible>
-				<equals>
-					<property>/it-autoflight/text/thr</property>
-					<value>THR LIM</value>
-				</equals>
-			</visible>
 			<border>1</border>
-			<label>THR LIM</label>
-			<valign>center</valign>
-		</text>
-		<text>
-			<row>0</row>
-			<col>1</col>
-			<visible>
-				<equals>
-					<property>/it-autoflight/text/thr</property>
-					<value>IDLE</value>
-				</equals>
-			</visible>
-			<border>1</border>
-			<label>IDLE </label>
-			<valign>center</valign>
-		</text>
-		<text>
-			<row>0</row>
-			<col>1</col>
-			<visible>
-				<equals>
-					<property>/it-autoflight/text/thr</property>
-					<value>RETARD</value>
-				</equals>
-			</visible>
-			<border>1</border>
-			<label>RETARD</label>
-			<valign>center</valign>
-		</text>
-		<text>
-			<row>0</row>
-			<col>1</col>
-			<visible>
-				<and>
-					<not-equals>
-						<property>/it-autoflight/text/thr</property>
-						<value>THR LIM</value>
-					</not-equals>
-					<not-equals>
-						<property>/it-autoflight/text/thr</property>
-						<value>IDLE</value>
-					</not-equals>
-					<not-equals>
-						<property>/it-autoflight/text/thr</property>
-						<value>RETARD</value>
-					</not-equals>
-				</and>
-			</visible>
-			<border>1</border>
-			<label>999999</label>
+			<label>9999999</label>
 			<valign>center</valign>
 			<property>/it-autoflight/text/thr</property>
 			<live>1</live>
@@ -274,7 +226,7 @@
 				</and>
 			</visible>
 			<border>1</border>
-			<label>LNV</label>
+			<label>LNAV</label>
 			<valign>center</valign>
 		</text>
 		
@@ -287,7 +239,7 @@
 			<row>0</row>
 			<col>5</col>
 			<border>1</border>
-			<label>9999</label>
+			<label>99999999</label>
 			<valign>center</valign>
 			<property>/it-autoflight/text/lat</property>
 			<live>1</live>
@@ -597,7 +549,7 @@
 		</button>
 		<button>
 			<legend>VOR/LOC</legend>
-			<pref-width>65</pref-width>
+			<pref-width>70</pref-width>
 			<binding>
 				<command>property-assign</command>
 				<property>/it-autoflight/input/lat</property>
@@ -720,7 +672,7 @@
 					<value>0</value>
 				</equals>
 			</visible>
-			<pref-width>33</pref-width>
+			<pref-width>40</pref-width>
 			<pref-height>25</pref-height>
 			<legend>[ 1 ]</legend>
 			<binding>
@@ -738,7 +690,7 @@
 					<value>0</value>
 				</not-equals>
 			</visible>
-			<pref-width>33</pref-width>
+			<pref-width>40</pref-width>
 			<pref-height>25</pref-height>
 			<legend>1</legend>
 			<binding>
@@ -756,7 +708,7 @@
 					<value>1</value>
 				</equals>
 			</visible>
-			<pref-width>33</pref-width>
+			<pref-width>40</pref-width>
 			<pref-height>25</pref-height>
 			<legend>[ 2 ]</legend>
 			<binding>
@@ -774,7 +726,7 @@
 					<value>1</value>
 				</not-equals>
 			</visible>
-			<pref-width>33</pref-width>
+			<pref-width>40</pref-width>
 			<pref-height>25</pref-height>
 			<legend>2</legend>
 			<binding>
@@ -792,7 +744,7 @@
 					<value>2</value>
 				</equals>
 			</visible>
-			<pref-width>33</pref-width>
+			<pref-width>40</pref-width>
 			<pref-height>25</pref-height>
 			<legend>[ 3 ]</legend>
 			<binding>
@@ -810,7 +762,7 @@
 					<value>2</value>
 				</not-equals>
 			</visible>
-			<pref-width>33</pref-width>
+			<pref-width>40</pref-width>
 			<pref-height>25</pref-height>
 			<legend>3</legend>
 			<binding>
@@ -874,7 +826,7 @@
 		
 		<button>
 			<legend>HLD</legend>
-			<pref-width>40</pref-width>
+			<pref-width>45</pref-width>
 			<binding>
 				<command>property-assign</command>
 				<property>/it-autoflight/input/vert</property>
@@ -883,7 +835,7 @@
 		</button>
 		<button>
 			<legend>FLCH</legend>
-			<pref-width>40</pref-width>
+			<pref-width>45</pref-width>
 			<binding>
 				<command>property-assign</command>
 				<property>/it-autoflight/input/vert</property>
@@ -892,7 +844,7 @@
 		</button>
 		<button>
 			<legend>V/S</legend>
-			<pref-width>40</pref-width>
+			<pref-width>45</pref-width>
 			<binding>
 				<command>property-assign</command>
 				<property>/it-autoflight/input/vert</property>
@@ -901,7 +853,7 @@
 		</button>
 		<button>
 			<legend>FPA</legend>
-			<pref-width>40</pref-width>
+			<pref-width>45</pref-width>
 			<binding>
 				<command>property-assign</command>
 				<property>/it-autoflight/input/vert</property>
@@ -910,7 +862,7 @@
 		</button>
 		<button>
 			<legend>ILS</legend>
-			<pref-width>55</pref-width>
+			<pref-width>45</pref-width>
 			<binding>
 				<command>property-assign</command>
 				<property>/it-autoflight/input/vert</property>
